@@ -48,6 +48,8 @@
 (function (exports, undefined) {
 "use strict";
 
+var DUCK = "I look like a promise, I quack like a promise.";
+
 var enqueue;
 try {
     // Narwhal, Node (with a package, wraps process.nextTick)
@@ -112,7 +114,7 @@ function defer() {
 
     var promise = create(Promise.prototype);
 
-    promise.emit = function () {
+    promise[DUCK] = function () {
         var args = Array.prototype.slice.call(arguments);
         if (pending) {
             pending.push(args);
@@ -170,7 +172,7 @@ function Promise(descriptor, fallback, valueOf) {
 
     var promise = create(Promise.prototype);
 
-    promise.emit = function (op, resolved /* ...args */) {
+    promise[DUCK] = function (op, resolved /* ...args */) {
         resolved = resolved || identity;
         var args = Array.prototype.slice.call(arguments, 2);
         var result;
@@ -203,7 +205,7 @@ freeze(Promise.prototype);
  */
 exports.isPromise = isPromise;
 function isPromise(object) {
-    return object instanceof Promise;
+    return object && typeof object[DUCK] === "function";
 };
 
 /**
@@ -308,7 +310,7 @@ function when(value, resolved, rejected) {
         if (done)
             return;
         done = true;
-        deferred.resolve(ref(value).emit("when", resolved, rejected));
+        deferred.resolve(ref(value)[DUCK]("when", resolved, rejected));
     }, function (reason) {
         if (done)
             return;
@@ -427,7 +429,7 @@ function forward(promise /*, op, resolved, ... */) {
     var args = Array.prototype.slice.call(arguments, 1);
     enqueue(function () {
         try {
-            promise.emit.apply(promise, args);
+            promise[DUCK].apply(promise, args);
         } catch (exception) {
             print(exception.stack || exception);
         }
